fix: исправить недочеты в соответствии с ревью